refactor: Noir preset 따로 파일로 관리

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,6 +3,11 @@
     src:local("NanumGothic-Regular"),
     url('./fonts/NanumGothic-Regular.ttf') 
 }
+
 * {
     font-family: "NanumGothic";
+}
+
+body {
+    margin: 0;
 }
