feature: PageLayout 컴포넌트 추가

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,13 +1,40 @@
+/**
+ * 폰트 셋팅
+ */
 @font-face {
     font-family: "NanumGothic";
     src:local("NanumGothic-Regular"),
     url('./fonts/NanumGothic-Regular.ttf') 
 }
 
+@font-face {
+    font-family: "NanumGothicBold";
+    src:local("NanumGothic-Bold"),
+    url('./fonts/NanumGothic-Bold.ttf') 
+}
+
+@font-face {
+    font-family: "NanumGothicExtraBold";
+    src:local("NanumGothic-ExtraBold"),
+    url('./fonts/NanumGothic-ExtraBold.ttf') 
+}
+
+
 * {
     font-family: "NanumGothic";
 }
 
+h1, h2 {
+    font-family: "NanumGothicExtraBold";
+}
+
+h3, h4, h5, h6 {
+    font-family: "NanumGothicBold";
+}
+
+/*
+ * default 스타일 셋팅
+ */
 body {
     margin: 0;
     width: 100vw;
@@ -17,4 +44,6 @@ body {
 #app {
     width: 100vw;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
