--- a/src/assets/utils.css
+++ b/src/assets/utils.css
@@ -1,5 +1,6 @@
 /* 공유할 css class 작성 */
 
+/* flex, grid 관련 클래스 */
 .flex-row {
     display: flex;
     flex-direction: row;
@@ -10,6 +11,33 @@
     flex-direction: column;
 }
 
+.items-center {
+    align-items: center;
+}
+
 .gap-10 {
     gap: 10px;
+}
+
+.gap-20 {
+    gap: 20px;
+}
+
+/* padding */
+
+/* margin */
+.mb-sx {
+    margin-bottom: 8px;
+}
+.mb-s {
+    margin-bottom: 16px;
+}
+.mb-m {
+    margin-bottom: 24px;
+}
+.mb-l {
+    margin-bottom: 32px;
+}
+.mb-xl {
+    margin-bottom: 48px;
 }
