--- a/src/assets/utils.css
+++ b/src/assets/utils.css
@@ -15,6 +15,10 @@
     align-items: center;
 }
 
+.items-end {
+    align-items: flex-end;
+}
+
 .content-between {
     justify-content: space-between;
 }
