--- a/src/assets/utils.css
+++ b/src/assets/utils.css
@@ -15,12 +15,28 @@
     align-items: center;
 }
 
+.items-start {
+    align-items: flex-start;
+}
+
 .items-end {
     align-items: flex-end;
 }
 
 .content-between {
     justify-content: space-between;
+}
+
+.grow-1 {
+    flex-grow: 1;
+}
+
+.shrink-0 {
+    flex-shrink: 0;
+}
+
+.gap-5 {
+    gap: 5px;
 }
 
 .gap-10 {
