--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -58,3 +58,11 @@ a {
     color: black;
     text-decoration: none;
 }
+
+ul {
+    padding: 0;
+    margin: 0;
+}
+ul > li {
+    list-style-type: none;
+}
