feat: 리뷰 삭제 API 연동 완료 [resolved #59]

--- a/src/assets/utils.css
+++ b/src/assets/utils.css
@@ -98,3 +98,22 @@
 .mt-xl {
     margin-top: 48px;
 }
+
+.mr-xxs {
+    margin-right: 4px;
+}
+.mr-xs {
+    margin-right: 8px;
+}
+.mr-s {
+    margin-right: 16px;
+}
+.mr-m {
+    margin-right: 24px;
+}
+.mr-l {
+    margin-right: 32px;
+}
+.mr-xl {
+    margin-right: 48px;
+}
